// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-4">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-14 rsg--inheritSize-15 rsg--baseColor-19">
  Hello
  <em class="rsg--text-14 rsg--inheritSize-15 rsg--baseColor-19 rsg--em-21">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-6">
    <h1 class="rsg--heading-7 rsg--heading1-8">
      Header
    </h1>
  </div>
  <p class="rsg--para-4">
    Text with
    <em class="rsg--text-14 rsg--inheritSize-15 rsg--baseColor-19 rsg--em-21">
      some
    </em>
    <strong class="rsg--text-14 rsg--inheritSize-15 rsg--baseColor-19 rsg--strong-22">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-5"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-4">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-30">
  <p class="rsg--para-4">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render a table 1`] = `

<table class="rsg--table-31">
  <thead class="rsg--thead-32">
    <tr>
      <th class="rsg--th-34 rsg--td-33">
        heading 1
      </th>
      <th class="rsg--th-34 rsg--td-33">
        heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="rsg--td-33">
        foo
      </td>
      <td class="rsg--td-33">
        bar
      </td>
    </tr>
    <tr>
      <td class="rsg--td-33">
        more foo
      </td>
      <td class="rsg--td-33">
        more bar
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--list-24">
  <li class="rsg--li-26">
    <input type="checkbox"
           readonly
           class="rsg--input-27"
    >
    list 1
  </li>
  <li class="rsg--li-26">
    <input type="checkbox"
           readonly
           class="rsg--input-27"
    >
    list 2
  </li>
  <li class="rsg--li-26">
    <input type="checkbox"
           checked
           readonly
           class="rsg--input-27"
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-28">
  <code class="lang-html rsg--code-29">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-6">
    <h1 class="rsg--heading-7 rsg--heading1-8">
      one
    </h1>
  </div>
  <div class="rsg--spacing-6">
    <h2 class="rsg--heading-7 rsg--heading2-9">
      two
    </h2>
  </div>
  <div class="rsg--spacing-6">
    <h3 class="rsg--heading-7 rsg--heading3-10">
      three
    </h3>
  </div>
  <div class="rsg--spacing-6">
    <h4 class="rsg--heading-7 rsg--heading4-11">
      four
    </h4>
  </div>
  <div class="rsg--spacing-6">
    <h5 class="rsg--heading-7 rsg--heading5-12">
      five
    </h5>
  </div>
  <div class="rsg--spacing-6">
    <h6 class="rsg--heading-7 rsg--heading6-13">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-4">
  Foo
  <code class="rsg--code-29">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-4">
  a
  <a href="http://test.com"
     class="rsg--link-5"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--list-24">
  <li class="rsg--li-26">
    list 1
  </li>
  <li class="rsg--li-26">
    list 2
    <ol class="rsg--list-24 rsg--ordered-25">
      <li class="rsg--li-26">
        Sub-list
      </li>
      <li class="rsg--li-26">
        Sub-list
      </li>
      <li class="rsg--li-26">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-26">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--list-24 rsg--ordered-25">
  <li class="rsg--li-26">
    list
  </li>
  <li class="rsg--li-26">
    item
  </li>
  <li class="rsg--li-26">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--list-24">
  <li class="rsg--li-26">
    list
  </li>
  <li class="rsg--li-26">
    item
  </li>
  <li class="rsg--li-26">
    three
  </li>
</ul>

`;
